Task 1499: Wrap issue

--- a/mkdocs_bs4/assets/css/style.css
+++ b/mkdocs_bs4/assets/css/style.css
@@ -325,6 +325,9 @@ blockquote a, blockquote a:visited {
     background: #ffffff;
     padding: 0px 0px 0px 40px;
 }
+.main-content-body a {
+	word-break: break-word;
+}
 .main-content-body h1 {
 	margin-bottom: 30px;
 	word-break: break-word;
